--- a/Harrisonburg.ipynb
+++ b/Harrisonburg.ipynb
@@ -6,7 +6,7 @@
       "name": "Harrisonburg.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMrF0Bpe532oZJUsVOzreV0",
+      "authorship_tag": "ABX9TyO/QLRNsineU6h1swczN6lP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -385,18 +385,45 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "t7fxiThQyMPD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "###Convert to datetime\n",
+        "va_locality_cases['report_date'] = pd.to_datetime(va_locality_cases['report_date'])"
+      ],
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "91351z-64F3T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "va_locality_cases['report_date'] = va_locality_cases['report_date'].dt.date"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V23w_NJ2yclo",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 419
         },
-        "outputId": "1f9a0dc7-dcc0-497f-d9d4-68912f2897be"
+        "outputId": "d16dbab0-af26-4321-d252-c1ec3eac38a1"
       },
       "source": [
-        "va_locality_cases.head()"
+        "va_locality_cases"
       ],
-      "execution_count": 29,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +459,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2020-09-08T00:00:00.000</td>\n",
+              "      <td>2020-09-08</td>\n",
               "      <td>51001</td>\n",
               "      <td>Accomack</td>\n",
               "      <td>Eastern Shore</td>\n",
@@ -442,7 +469,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2020-09-08T00:00:00.000</td>\n",
+              "      <td>2020-09-08</td>\n",
               "      <td>51003</td>\n",
               "      <td>Albemarle</td>\n",
               "      <td>Thomas Jefferson</td>\n",
@@ -452,7 +479,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2020-09-08T00:00:00.000</td>\n",
+              "      <td>2020-09-08</td>\n",
               "      <td>51005</td>\n",
               "      <td>Alleghany</td>\n",
               "      <td>Alleghany</td>\n",
@@ -462,7 +489,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2020-09-08T00:00:00.000</td>\n",
+              "      <td>2020-09-08</td>\n",
               "      <td>51007</td>\n",
               "      <td>Amelia</td>\n",
               "      <td>Piedmont</td>\n",
@@ -472,7 +499,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2020-09-08T00:00:00.000</td>\n",
+              "      <td>2020-09-08</td>\n",
               "      <td>51009</td>\n",
               "      <td>Amherst</td>\n",
               "      <td>Central Virginia</td>\n",
@@ -480,25 +507,92 @@
               "      <td>10</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1995</th>\n",
+              "      <td>2020-08-24</td>\n",
+              "      <td>51001</td>\n",
+              "      <td>Accomack</td>\n",
+              "      <td>Eastern Shore</td>\n",
+              "      <td>1135</td>\n",
+              "      <td>88</td>\n",
+              "      <td>18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1996</th>\n",
+              "      <td>2020-08-24</td>\n",
+              "      <td>51003</td>\n",
+              "      <td>Albemarle</td>\n",
+              "      <td>Thomas Jefferson</td>\n",
+              "      <td>963</td>\n",
+              "      <td>64</td>\n",
+              "      <td>16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1997</th>\n",
+              "      <td>2020-08-24</td>\n",
+              "      <td>51005</td>\n",
+              "      <td>Alleghany</td>\n",
+              "      <td>Alleghany</td>\n",
+              "      <td>61</td>\n",
+              "      <td>7</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1998</th>\n",
+              "      <td>2020-08-24</td>\n",
+              "      <td>51007</td>\n",
+              "      <td>Amelia</td>\n",
+              "      <td>Piedmont</td>\n",
+              "      <td>92</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1999</th>\n",
+              "      <td>2020-08-24</td>\n",
+              "      <td>51009</td>\n",
+              "      <td>Amherst</td>\n",
+              "      <td>Central Virginia</td>\n",
+              "      <td>262</td>\n",
+              "      <td>9</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>2000 rows × 7 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "               report_date   fips  ... hospitalizations deaths\n",
-              "0  2020-09-08T00:00:00.000  51001  ...               87     19\n",
-              "1  2020-09-08T00:00:00.000  51003  ...               69     19\n",
-              "2  2020-09-08T00:00:00.000  51005  ...                8      4\n",
-              "3  2020-09-08T00:00:00.000  51007  ...               13      3\n",
-              "4  2020-09-08T00:00:00.000  51009  ...               10      1\n",
+              "     report_date   fips   locality  ... total_cases hospitalizations deaths\n",
+              "0     2020-09-08  51001   Accomack  ...        1154               87     19\n",
+              "1     2020-09-08  51003  Albemarle  ...        1096               69     19\n",
+              "2     2020-09-08  51005  Alleghany  ...          71                8      4\n",
+              "3     2020-09-08  51007     Amelia  ...         110               13      3\n",
+              "4     2020-09-08  51009    Amherst  ...         325               10      1\n",
+              "...          ...    ...        ...  ...         ...              ...    ...\n",
+              "1995  2020-08-24  51001   Accomack  ...        1135               88     18\n",
+              "1996  2020-08-24  51003  Albemarle  ...         963               64     16\n",
+              "1997  2020-08-24  51005  Alleghany  ...          61                7      4\n",
+              "1998  2020-08-24  51007     Amelia  ...          92               13      2\n",
+              "1999  2020-08-24  51009    Amherst  ...         262                9      1\n",
               "\n",
-              "[5 rows x 7 columns]"
+              "[2000 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 83
         }
       ]
     },
@@ -537,28 +631,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "d597a504-11c3-4016-a9b5-10861688fe5d"
+        "outputId": "404e9d8f-a522-47cf-9409-d0aab9fd74e4"
       },
       "source": [
         "va_locality_cases['report_date'].describe()"
       ],
-      "execution_count": 33,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "count                        2000\n",
-              "unique                         16\n",
-              "top       2020-09-01T00:00:00.000\n",
-              "freq                          133\n",
+              "count           2000\n",
+              "unique            16\n",
+              "top       2020-08-31\n",
+              "freq             133\n",
               "Name: report_date, dtype: object"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 84
         }
       ]
     },
@@ -572,7 +666,7 @@
       "source": [
         "current_cases = va_locality_cases[va_locality_cases['report_date'] == va_locality_cases['report_date'].max()]"
       ],
-      "execution_count": 35,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -584,10 +678,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 232
         },
-        "outputId": "9bbe4f08-8369-48d1-93bf-407ccb2a5023"
+        "outputId": "49658988-080a-4c83-df42-452f619dcb43"
       },
       "source": [
-        "va_county_cases_fig = px.choropleth(va_locality_cases, geojson=counties, locations='FIPS', color='Total Cases',\n",
+        "va_county_cases_fig = px.choropleth(va_locality_cases, geojson=counties, locations='fips', color='Total Cases',\n",
         " color_continuous_scale='portland',\n",
         " range_color=(va_locality_cases['total_cases'].min(), va_locality_cases['total_cases'].mean()*4),\n",
         " scope='usa',\n",
@@ -602,7 +696,7 @@
         "va_county_cases_fig.show()\n",
         "#va_county_cases_fig.write_html('/content/full_map.html')"
       ],
-      "execution_count": 39,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "error",
@@ -611,7 +705,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-39-29f57ec90ec1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0mscope\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'usa'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m  labels={'color':'Current Covid Cases',\n\u001b[0;32m----> 6\u001b[0;31m          \u001b[0;34m'Locality'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'County'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m          }\n\u001b[1;32m      8\u001b[0m  )\n",
+            "\u001b[0;32m<ipython-input-86-384cae39372a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0mscope\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'usa'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m  labels={'color':'Current Covid Cases',\n\u001b[0;32m----> 6\u001b[0;31m          \u001b[0;34m'Locality'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'County'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m          }\n\u001b[1;32m      8\u001b[0m  )\n",
             "\u001b[0;31mTypeError\u001b[0m: choropleth() got an unexpected keyword argument 'geojson'"
           ]
         }
@@ -702,24 +796,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 302
         },
-        "outputId": "21368abb-101d-4c51-dddf-e54cd72b0a84"
+        "outputId": "47792cf9-c9b5-42f9-f8ea-bb2418fd2571"
       },
       "source": [
         "harrison['rolling_avg'].plot(kind='bar',)"
       ],
-      "execution_count": 54,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f506bb3bb38>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f5063a53be0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 70
         },
         {
           "output_type": "display_data",
@@ -745,7 +839,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 375
         },
-        "outputId": "823f7057-44d6-4420-a108-20fc8c6d2754"
+        "outputId": "d5f5e164-ca94-4116-be6d-aeecf011bf0f"
       },
       "source": [
         "harrisonburg_sevenday_rolling = px.bar(harrison, x='report_date', y='rolling_avg',\n",
@@ -753,7 +847,7 @@
         "                                      'report_date':'Date',})\n",
         "harrisonburg_sevenday_rolling.show()"
       ],
-      "execution_count": 62,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "error",
@@ -772,7 +866,7 @@
             "\u001b[0;31mAttributeError\u001b[0m: module 'plotly.validators.layout.template.data' has no attribute 'AreasValidator'",
             "\nDuring handling of the above exception, another exception occurred:\n",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-62-a8e34e003417>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m harrisonburg_sevenday_rolling = px.bar(harrison, x='report_date', y='rolling_avg',\n\u001b[1;32m      2\u001b[0m                                        labels={'rolling_avg':'Number of Positive Cases', \n\u001b[0;32m----> 3\u001b[0;31m                                       'report_date':'Date',})\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mharrisonburg_sevenday_rolling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-71-a8e34e003417>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m harrisonburg_sevenday_rolling = px.bar(harrison, x='report_date', y='rolling_avg',\n\u001b[1;32m      2\u001b[0m                                        labels={'rolling_avg':'Number of Positive Cases', \n\u001b[0;32m----> 3\u001b[0;31m                                       'report_date':'Date',})\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mharrisonburg_sevenday_rolling\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/plotly/express/_chart_types.py\u001b[0m in \u001b[0;36mbar\u001b[0;34m(data_frame, x, y, color, facet_row, facet_col, facet_col_wrap, hover_name, hover_data, custom_data, text, error_x, error_x_minus, error_y, error_y_minus, animation_frame, animation_group, category_orders, labels, color_discrete_sequence, color_discrete_map, color_continuous_scale, range_color, color_continuous_midpoint, opacity, orientation, barmode, log_x, log_y, range_x, range_y, title, template, width, height)\u001b[0m\n\u001b[1;32m    311\u001b[0m     \u001b[0mfacet_row\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    312\u001b[0m     \u001b[0mfacet_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 313\u001b[0;31m     \u001b[0mfacet_col_wrap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    314\u001b[0m     \u001b[0mfacet_row_spacing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    315\u001b[0m     \u001b[0mfacet_col_spacing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/plotly/express/_core.py\u001b[0m in \u001b[0;36mmake_figure\u001b[0;34m(args, constructor, trace_patch, layout_patch)\u001b[0m\n\u001b[1;32m   1167\u001b[0m                 \u001b[0;32melif\u001b[0m \u001b[0mlength\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0margument\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlength\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1168\u001b[0m                     raise ValueError(\n\u001b[0;32m-> 1169\u001b[0;31m                         \u001b[0;34m\"All arguments should have the same length. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1170\u001b[0m                         \u001b[0;34m\"The length of column argument `df[%s]` is %d, whereas the \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1171\u001b[0m                         \u001b[0;34m\"length of  previously-processed arguments %s is %d\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/plotly/express/_core.py\u001b[0m in \u001b[0;36mapply_default_cascade\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m    748\u001b[0m                 \u001b[0;34m\"xanchor\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"right\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    749\u001b[0m                 \u001b[0;34m\"y\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 750\u001b[0;31m                 \u001b[0;34m\"yanchor\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"top\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    751\u001b[0m             }\n\u001b[1;32m    752\u001b[0m         ]\n",
