--- a/Harrisonburg.ipynb
+++ b/Harrisonburg.ipynb
@@ -58,7 +58,7 @@
         "import numpy as np\n",
         "import plotly.express as px"
       ],
-      "execution_count": 19,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -142,20 +142,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "2f18b0f0-7158-4440-9fba-4d4ac31a0420"
+        "outputId": "63d0fc45-46ad-4c85-888d-ddd3cf075211"
       },
       "source": [
         "###Must run for visualizations\n",
         "!pip install plotly==4.9.0"
       ],
-      "execution_count": 22,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: plotly==4.9.0 in /usr/local/lib/python3.6/dist-packages (4.9.0)\n",
-            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.6/dist-packages (from plotly==4.9.0) (1.3.3)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from plotly==4.9.0) (1.15.0)\n"
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from plotly==4.9.0) (1.15.0)\n",
+            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.6/dist-packages (from plotly==4.9.0) (1.3.3)\n"
           ],
           "name": "stdout"
         }
@@ -678,7 +678,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 232
         },
-        "outputId": "49658988-080a-4c83-df42-452f619dcb43"
+        "outputId": "c7aab23b-e4c7-440e-9d91-4dc16fefec80"
       },
       "source": [
         "va_county_cases_fig = px.choropleth(va_locality_cases, geojson=counties, locations='fips', color='Total Cases',\n",
@@ -696,7 +696,7 @@
         "va_county_cases_fig.show()\n",
         "#va_county_cases_fig.write_html('/content/full_map.html')"
       ],
-      "execution_count": 86,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "error",
@@ -705,7 +705,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-86-384cae39372a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0mscope\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'usa'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m  labels={'color':'Current Covid Cases',\n\u001b[0;32m----> 6\u001b[0;31m          \u001b[0;34m'Locality'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'County'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m          }\n\u001b[1;32m      8\u001b[0m  )\n",
+            "\u001b[0;32m<ipython-input-93-384cae39372a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0mscope\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'usa'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m  labels={'color':'Current Covid Cases',\n\u001b[0;32m----> 6\u001b[0;31m          \u001b[0;34m'Locality'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'County'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m          }\n\u001b[1;32m      8\u001b[0m  )\n",
             "\u001b[0;31mTypeError\u001b[0m: choropleth() got an unexpected keyword argument 'geojson'"
           ]
         }
